fix ceilings, they dont always stretch across

--- a/src/index.styl
+++ b/src/index.styl
@@ -346,7 +346,7 @@ html
   height: 50px;
   left: 0;
   margin: 0;
-  width: 430px;
+  width: 400px;
   padding: 0 0 0 10px;
   position: fixed;
   z-index: 9999999;
